--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
