--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "recharts": "^2.9.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
