--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@/*": ["./*"],
       "@components/*": ["app/components/*"],
       "@data/*": ["app/data/*"],
+      "@helpers/*": ["app/helpers/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
