--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.14",
+    "@vercel/analytics": "^1.1.1",
     "next": "13.5.5",
     "react": "^18",
     "react-dom": "^18",
